image on home page

--- a/index.html
+++ b/index.html
@@ -19,34 +19,37 @@
         <i class="fa fa-envelope-o" style="font-size:30px;color: lightblue"></i>
         <a class="mailto" href="mailto:info@tgif.net" target="_top">info@tgif.net</a>
     </header>
-    
-        <nav class="navbar">
-            <a href="#home">Home</a>
-            <div class="dropdown">
-                <button class="dropbtn">Congress 113</button>
-                <div class="dropdown-content">
-                    <a href="#">House</a>
-                    <a href="#">Senate</a>
-                </div>
+
+    <nav class="navbar">
+        <a href="#home">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Congress 113</button>
+            <div class="dropdown-content">
+                <a href="#">House</a>
+                <a href="#">Senate</a>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">Attendance</button>
-                <div class="dropdown-content">
-                    <a href="#">House</a>
-                    <a href="#">Senate</a>
-                </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Attendance</button>
+            <div class="dropdown-content">
+                <a href="#">House</a>
+                <a href="#">Senate</a>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">Party Loyalty</button>
-                <div class="dropdown-content">
-                    <a href="#">House</a>
-                    <a href="#">Senate</a>
-                </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Party Loyalty</button>
+            <div class="dropdown-content">
+                <a href="#">House</a>
+                <a href="#">Senate</a>
             </div>
-        </nav>
-        <main>
+        </div>
+    </nav>
+    <main>
         <div class="text">
             <h3>About Us</h3>
+            <div class="home-image-wrapper">
+                <img class="home-image" src="-1x-1.jpg" alt="" srcset="">
+            </div>
             <p>Openness, accountability, and honesty define government transparency. In a free society, transparency is
                 government's obligation to share information with citizens. It is at the heart of how citizens hold
                 their
@@ -65,55 +68,55 @@
             <span id="dots">...</span><span id="more">
                 <h3>Background History of Government Transparency</h3>
                 In the West, the idea that government should be open to public scrutiny and susceptible to public
-                    opinion
-                    dates back at least to the time of the Enlightenment, when many philosophes made an attack on
-                    absolutist
-                    doctrine of state secrecy, a core part of their intellectual project. The passage of formal
-                    legislative
-                    instruments to this end can also be traced to this time with Sweden, for example, (which then
-                    included
-                    Finland as a Swedish-governed territory) enacting free press legislation as part of its constitution
-                    (Freedom of the Press Act, 1766). This approach, and that of the philosophes more broadly, is
-                    strongly
-                    related to recent historiography on the eighteenth-century public sphere.
+                opinion
+                dates back at least to the time of the Enlightenment, when many philosophes made an attack on
+                absolutist
+                doctrine of state secrecy, a core part of their intellectual project. The passage of formal
+                legislative
+                instruments to this end can also be traced to this time with Sweden, for example, (which then
+                included
+                Finland as a Swedish-governed territory) enacting free press legislation as part of its constitution
+                (Freedom of the Press Act, 1766). This approach, and that of the philosophes more broadly, is
+                strongly
+                related to recent historiography on the eighteenth-century public sphere.
 
-                    <p>Influenced by Enlightenment thought, the revolutions in America (1776) and France (1789), freedom
-                        of
-                        the
-                        press enshrined provisions and requirements for public budgetary accounting and freedom of the
-                        press
-                        in
-                        constitutional articles. In the nineteenth century, attempts by Metternichean statesmen to row
-                        back
-                        on
-                        these measures were vigorously opposed by a number of eminent liberal politicians and writers,
-                        Bentham,
-                        Mill and Acton prominent among the latter.</p>
+                <p>Influenced by Enlightenment thought, the revolutions in America (1776) and France (1789), freedom
+                    of
+                    the
+                    press enshrined provisions and requirements for public budgetary accounting and freedom of the
+                    press
+                    in
+                    constitutional articles. In the nineteenth century, attempts by Metternichean statesmen to row
+                    back
+                    on
+                    these measures were vigorously opposed by a number of eminent liberal politicians and writers,
+                    Bentham,
+                    Mill and Acton prominent among the latter.</p>
 
-                    <p>Open government is widely seen to be a key hallmark of contemporary democratic practice and is
-                        often
-                        linked to the passing of freedom of information legislation. Scandinavian countries claim to
-                        have
-                        adopted the first freedom of information legislation, dating the origins of its modern
-                        provisions to
-                        the
-                        eighteenth century and Finland continuing the presumption of openness after gaining independence
-                        in
-                        1917, passing its Act on Publicity of Official Documents in 1951 (superseded by new legislation
-                        in
-                        1999).</p>
+                <p>Open government is widely seen to be a key hallmark of contemporary democratic practice and is
+                    often
+                    linked to the passing of freedom of information legislation. Scandinavian countries claim to
+                    have
+                    adopted the first freedom of information legislation, dating the origins of its modern
+                    provisions to
+                    the
+                    eighteenth century and Finland continuing the presumption of openness after gaining independence
+                    in
+                    1917, passing its Act on Publicity of Official Documents in 1951 (superseded by new legislation
+                    in
+                    1999).</p>
 
-                    <p>The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to
-                        Information
-                        Acts
-                        (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.</p>
-                    </span>
+                <p>The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to
+                    Information
+                    Acts
+                    (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.</p>
+            </span>
         </div>
         <button onclick="myFunction()" id="myBtn">Read more</button>
     </main>
-        <div class="footer">
-            <span class="footer-text"> &copy; 2020 TGIF | All Rights Reserved</span>
-        </div>
+    <div class="footer">
+        <span class="footer-text"> &copy; 2020 TGIF | All Rights Reserved</span>
+    </div>
     <script src="home.js"></script>
 </body>
 
