--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
     </nav>
     <main>
+        <div id='spinner' class="spinner"></div>
         <div id="text">
             <h3>About Us</h3>
             <div class="home-image-wrapper">
