--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@
             </span>
             <button onclick="myFunction()" id="myBtn">Read more</button>
         </div>
-      <div id="congress"></div>
-      <div id="attendace"></div>
-      <div id="loyalty"></div>
+        <div id="congress">
+            <div id="check-boxes-div"></div>
+            <div id="dropdown-div"></div>
+            <div id="congress-info-table-div"></div>
+        </div>
+        <div id="attendace"></div>
+        <div id="loyalty"></div>
     </main>
     <div class="footer">
         <span class="footer-text"> &copy; 2020 TGIF | All Rights Reserved</span>
