--- a/index.html
+++ b/index.html
@@ -119,14 +119,18 @@
             <div id="dropdown-div"></div>
             <div id="congress-info-table-div"></div>
         </div>
-        <div id="attendace"></div>
+        <div id="attendace">
+            <div id="at-a-glance"></div>
+            <div id="a-least"></div>
+            <div id="a-most"></div>
+        </div>
         <div id="loyalty"></div>
     </main>
     <div class="footer">
         <span class="footer-text"> &copy; 2020 TGIF | All Rights Reserved</span>
     </div>
-    <script type="module" src="home.js"></script>
     <script type="module" src="info_congress.js"></script>
+    <script type="module" src="home.js"></script>
 </body>
 
 </html>
