at a glance table

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div id="dropdown-div"></div>
             <div id="congress-info-table-div"></div>
         </div>
-        <div id="attendace">
+        <div id="attendance">
             <div id="at-a-glance"></div>
             <div id="a-least"></div>
             <div id="a-most"></div>
@@ -131,6 +131,7 @@
     </div>
     <script type="module" src="info_congress.js"></script>
     <script type="module" src="home.js"></script>
+    <script src="attendance.js"></script>
 </body>
 
 </html>
