style added to congress

--- a/index.html
+++ b/index.html
@@ -115,13 +115,19 @@
             <button onclick="myFunction()" id="myBtn">Read more</button>
         </div>
         <div id="congress">
-            <div id="check-boxes-div"></div>
-            <div id="dropdown-div"></div>
+            <div class="filters">
+                <div id="check-boxes-div"></div>
+                <div id="dropdown-div"></div>
+            </div>
             <div id="congress-info-table-div"></div>
         </div>
         <div id="attendance">
+            <h4>House at Glance</h4>
             <div id="at-a-glance"></div>
+            <hr>
+            <h4>Least Engaged (Bottom 10% Attendance)</h4>
             <div id="a-least"></div>
+            <h4>Most Engaged (Top 10% Attendance)</h4>
             <div id="a-most"></div>
         </div>
         <div id="loyalty"></div>
