--- a/index.html
+++ b/index.html
@@ -122,22 +122,36 @@
             <div id="congress-info-table-div"></div>
         </div>
         <div id="attendance">
-            <h4 id="a-at-glance-table-head"></h4>
-            <div id="at-a-glance"></div>
-            <hr>
-            <h4>Least Engaged (Bottom 10% Attendance)</h4>
-            <div id="a-least"></div>
-            <h4>Most Engaged (Top 10% Attendance)</h4>
-            <div id="a-most"></div>
+            <div class="grid">
+                <div class="glance-table">
+                    <h4 id="a-at-glance-table-head"></h4>
+                    <div id="at-a-glance"></div>
+                </div>
+                <div class="least">
+                    <h4>Least Engaged (Bottom 10% Attendance)</h4>
+                    <div id="a-least"></div>
+                </div>
+                <div class="most">
+                    <h4>Most Engaged (Top 10% Attendance)</h4>
+                    <div id="a-most"></div>
+                </div>
+            </div>
         </div>
         <div id="loyalty">
-            <h4 id="l-at-glance-table-head"></h4>
-            <div id="l-at-a-glance"></div>
-            <hr>
-            <h4>Least Loyal (Bottom 10% of Party)</h4>
-            <div id="l-a-least"></div>
-            <h4>Most Loyal (Top 10% of Party)</h4>
-            <div id="l-a-most"></div>
+            <div class="grid">
+                <div class="glance-table">
+                    <h4 id="l-at-glance-table-head"></h4>
+                    <div id="l-at-a-glance"></div>
+                </div>
+                <div class="least">
+                    <h4>Least Loyal (Bottom 10% of Party)</h4>
+                    <div id="l-a-least"></div>
+                </div>
+                <div class="most">
+                    <h4>Most Loyal (Top 10% of Party)</h4>
+                    <div id="l-a-most"></div>
+                </div>
+            </div>
         </div>
     </main>
     <div class="footer">
